kubernetes/monitoring/prometheus/httpproxy-prometheus.yml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: prometheus
  namespace: monitoring
spec:
  virtualhost:
    fqdn: prometheus.domain.tld
  routes:
  - conditions:
    - prefix: /
    services:
    - name: prometheus
      port: 80
