kubernetes/monitoring/prometheus/ingress-prometheus.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
spec:
  rules:
  - host: prometheus.domain.tld
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus
          servicePort: 80
